Regression: Duplicating the object and separating it by loose parts wipes vertex group weights of the original object #113386

Closed
opened 2023-10-07 13:06:13 +02:00 by Bstabuu · 1 comment

System Information
Operating system: Linux-5.15.0-83-generic-x86_64-with-glibc2.31 64 Bits, X11 UI
Graphics card: Radeon RX 560 Series (POLARIS11, DRM 3.42.0, 5.15.0-83-generic, LLVM 12.0.0) AMD 4.6 (Core Profile) Mesa 21.2.6
CPU: Ryzen 5600G
16GB DDR4

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-15 01:59, hash: b601ae87d064
Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-12 22:05, hash: d48939f103c0

Short description of error
If I rig a mesh that has disconnected geometry, duplicate it and then separate the duplicated mesh by loose parts, the original mesh will lose its vertex group weights(vertex groups will stay but they will become empty). Duplicated & separated meshes will retain vertex group weights of the original mesh.

Exact steps for others to reproduce the error

  1. Add a cube object.
  2. Go to the edit mode, select all geometry, duplicate it and move it up in Z axis.
  3. Create an armature with 2 bones and align them with the geometry.
  4. Parent the cube object to the armature with automatic weights.
  5. Move the bones in pose mode to confirm that the cube object is rigged.
  6. Duplicate the rigged cube object.
  7. Select the duplicated cube object, go to edit mode and separate by loose parts.
  8. Try moving the bones in pose mode again - the duplicated and separated cube objects will move, the original cube object will not.

Reproduced with 3.6.2 on Linux and 3.6.0 on Windows 10. Also reproduced with manually assigned vertex groups on a complex robot model.
Also reproduced with daily build: blender-3.6.5-candidate+v36.49ef671e7b92-linux.x86_64.

**System Information** Operating system: Linux-5.15.0-83-generic-x86_64-with-glibc2.31 64 Bits, X11 UI Graphics card: Radeon RX 560 Series (POLARIS11, DRM 3.42.0, 5.15.0-83-generic, LLVM 12.0.0) AMD 4.6 (Core Profile) Mesa 21.2.6 CPU: Ryzen 5600G 16GB DDR4 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-15 01:59, hash: `b601ae87d064` Worked: version: 3.6.0 Alpha, branch: main, commit date: 2023-04-12 22:05, hash: `d48939f103c0` **Short description of error** If I rig a mesh that has disconnected geometry, duplicate it and then separate the duplicated mesh by loose parts, the original mesh will lose its vertex group weights(vertex groups will stay but they will become empty). Duplicated & separated meshes will retain vertex group weights of the original mesh. **Exact steps for others to reproduce the error** 1. Add a cube object. 2. Go to the edit mode, select all geometry, duplicate it and move it up in Z axis. 3. Create an armature with 2 bones and align them with the geometry. 4. Parent the cube object to the armature with automatic weights. 5. Move the bones in pose mode to confirm that the cube object is rigged. 6. Duplicate the rigged cube object. 7. Select the duplicated cube object, go to edit mode and separate by loose parts. 8. Try moving the bones in pose mode again - the duplicated and separated cube objects will move, the original cube object will not. Reproduced with 3.6.2 on Linux and 3.6.0 on Windows 10. Also reproduced with manually assigned vertex groups on a complex robot model. Also reproduced with daily build: blender-3.6.5-candidate+v36.49ef671e7b92-linux.x86_64.
Bstabuu added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-10-07 13:06:14 +02:00
Iliya Katushenock added this to the 3.6 LTS milestone 2023-10-07 13:07:37 +02:00
Iliya Katushenock changed title from Duplicating the object and separating it by loose parts wipes vertex group weights of the original object to Regression: Duplicating the object and separating it by loose parts wipes vertex group weights of the original object 2023-10-07 13:22:46 +02:00

Potentially caused by: 7eee378ecc
@JacquesLucke /

Potentially caused by: https://projects.blender.org/blender/blender/commit/7eee378eccc8f87e1330b9cfea2799928be9d657 @JacquesLucke /
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-11 11:37:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113386
No description provided.