source/blender/blenkernel/BKE_customdata.h
@@ -379,7 +379,8 @@ void CustomData_copy_layer_type_data(const struct CustomData *source,
                                      int count);
 
 /**
- * Frees data in a #CustomData object.
+ * Frees data in a #CustomData object. This is only expected to be called if the data layers are
+ * not shared (#CustomData_ensure_layers_are_mutable).
  */
 void CustomData_free_elem(struct CustomData *data, int index, int count);
 
@@ -434,6 +435,7 @@ void CustomData_swap_corners(struct CustomData *data, int index, const int *corn
  * function makes sure that the layer is unshared if it was shared, which makes it mutable.
  */
 void CustomData_ensure_data_is_mutable(struct CustomDataLayer *layer, int totelem);
+void CustomData_ensure_layers_are_mutable(struct CustomData *data, int totelem);
 
 /**
  * Retrieve a pointer to an element of the active layer of the given \a type, chosen by the
